--- a/sideline.css
+++ b/sideline.css
@@ -28,6 +28,14 @@
     max-height: 80vh;
 }
 
+.sl-header {
+    margin: 0 auto;
+}
+
+h4 {
+    margin: 0 auto;
+}
+
 .sideline-btn-container {
     position: absolute;
 }
