--- a/sideline.css
+++ b/sideline.css
@@ -17,10 +17,10 @@
     width: 41vw;
     margin-right: 3vw;
     margin-top: 20px;
-    padding: 15px;
+    /* padding: 15px; */
     background-color: #fff;
     min-height: 0;
-    box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2);
+    /* box-shadow: 0px 0px 12px 1px rgba(87, 87, 87, 0.2); */
     position: fixed;
     right: 0;
     top: 0;
@@ -30,10 +30,15 @@
 
 .sl-header {
     margin: 0 auto;
+    background-color: white;
+    padding-bottom: 15px;
+
 }
 
-h4 {
+.sl-divider {
     margin: 0 auto;
+    background-color: rgb(238, 238, 238);
+    height: 15px;
 }
 
 .sideline-btn-container {
@@ -47,6 +52,7 @@ h4 {
 }
 
 .sideline-pinned {
+    padding: 5px 15px !important;
     -webkit-transition: background 0.5s ease-in-out;
     -ms-transition:     background 0.5s ease-in-out;
     transition:         background 0.5s ease-in-out;
